TAG: seqcacheload-4-4-1-1
DATE: 03/11/2011
STAFF: lec
CHANGES: 
1) seqdummy.csh; removed call to trigger/SEQ_Source_Assoc_create.object

TAG: seqcacheload-4-4-0-2
DATE: 03/10/2011
STAFF: lec
CHANGES: 
1) seqdummy.py; SEQ_Source_Assoc trigger removed

TAG: seqcacheload-4-4-0-1
DATE: 11/15/2010
STAFF: sc
CHANGES: Merge tr10308 to trunk

TAG: seqcacheload-tr10308-3
DATE: 11/15/2010
STAFF: sc
CHANGES: After final seq grp verification

TAG: seqcacheload-tr10308-2
DATE: 10/08/2010
STAFF: sc
CHANGES: Round 2 after testing 

TAG: seqcacheload-tr10308-1
DATE: 10/08/2010
STAFF: sc
CHANGES: initial implementation

TAG: seqcacheload-tr10308-BP
DATE: 10/08/2010
STAFF: sc
CHANGES: Biotype Conflict revision

>>>>>>> 1.65
TAG: seqcacheload-4-3-3-2
DATE: 08/31/2010
STAFF: sc
CHANGES: TR10162`
1) Fix bug in loading lookups and typo in currentLongestProtein
   variable name 

TAG: seqcacheload-4-3-3-1
DATE: 03/11/2010
STAFF: lec
CHANGES:
1) merge TR9782 branch to the trunk

TAG: seqcacheload-tr9782-4
DATE: 03/08/2010
STAFF: sc
CHANGES:
1) comments

TAG: seqcacheload-tr9782-3
DATE: 03/01/2010
STAFF: sc
CHANGES:
1) TR9774 rep trans/prot algorithm update

TAG: seqcacheload-tr9782-2
TAG: seqcacheload-tr9782-1
DATE: 02/24/2010
STAFF: lec
CHANGES:
1) TR9239/seqmarker.py/add biotype lookup

TAG: seqcacheload-tr9782-BP
DATE: 02/18/2010
STAFF: lec
CHANGES:
1) Branch point ag for TR9782/TR9239 4.33 release

TAG: seqcacheload-4-2-2-1
DATE: 07/16/2009
STAFF: dbm
CHANGES:
1) TR 9081; add cattle data from Homologene

TAG: seqcacheload-4-1-1-1
DATE: 08/01/2008
STAFF: sc
CHANGES: merge tr8490 to trunk

TAG: seqcacheload-tr8490-4
DATE: 07/18/2008
STAFF: sc
CHANGES: decided to leave my development debugging code in place, so added 
  debug flag to Configuration and seqmarker.py

TAG: seqcacheload-tr8490-3
DATE: 07/2/2008
STAFF: sc
CHANGES: The latest algorithm

TAG: seqcacheload-tr8490-2
DATE: 02/28/2008
STAFF: sc
CHANGES:
1) updated genbank rep algo to allow longest genbank DNA seq to be rep